use publication urls instead of isbns to key books
